<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@color/bg_dss"
    tools:context="org.aphrc.myapplication.Fragments.Structure.StructureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUpdateRoomTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Str_Details"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark" />



        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addSTR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="addSTR"
                android:text="@string/add" />
            <Button
                android:id="@+id/updateStructure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="updateStructure"
                android:text="@string/update" />
        </LinearLayout>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/str_DATE"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/str_DATE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/str_STAFF"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/str_STAFF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/str_Site"
                    android:textSize="20sp"/>

                <org.aphrc.myapplication.Utilities.SearchSpinner.SearchableSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/str_site">
                </org.aphrc.myapplication.Utilities.SearchSpinner.SearchableSpinner>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/str_EA"
                    android:textSize="20sp"/>

                <org.aphrc.myapplication.Utilities.SearchSpinner.SearchableSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/str_EA">
                </org.aphrc.myapplication.Utilities.SearchSpinner.SearchableSpinner>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/str_NUM"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/str_Number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:textSize="20sp"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/str_NUMID"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/str_structureID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="7"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/str_BEFORE"
                    android:textSize="20sp"/>

                <org.aphrc.myapplication.Utilities.SearchSpinner.SearchableSpinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/str_Before">
                </org.aphrc.myapplication.Utilities.SearchSpinner.SearchableSpinner>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/str_AFTER"
                    android:textSize="20sp"/>

                <org.aphrc.myapplication.Utilities.SearchSpinner.SearchableSpinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/str_After">
                </org.aphrc.myapplication.Utilities.SearchSpinner.SearchableSpinner>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/str_hrb"
                    android:textSize="20sp"/>

                <org.aphrc.myapplication.Utilities.SearchSpinner.SearchableSpinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/str_hrb">
                </org.aphrc.myapplication.Utilities.SearchSpinner.SearchableSpinner>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5dp"
                    android:text="@string/str_COM"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/str_COM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:textSize="20sp"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</LinearLayout>